<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- global -->


    <!-- Login page -->
    <string name="app_name">StudentSystem</string>
    <string name="action_settings">Settings</string>
    <string name="login_usernameLabel">Username</string>
    <string name="login_passwordLabel">Password</string>
    <string name="login_loginbuttonLabel">Login</string>
    <string name="login_imageLabel">NFC login logo</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>

    <!-- Login idle screen -->
    <string name="loginidle_dateandtime">Date and time</string>
    <string name="loginidle_roomname">Room not set</string>
    <string name="loginidle_room">Room:</string>

    <!-- student timetable -->
    <string name="student_home_timetable_button">View Timetable</string>
    <string name="student_timetable_select">Select Timetable:</string>
    <string name="timetable_select">Select Timetable:</string>
    <string name="title_activity_student_timetable">StudentTimetableActivity</string>
    <string name="action_icon_title">Home Icon</string>
    <string name="action_logout_title">Logout!</string>
    <string name="title_activity_login_idle">LoginIdleActivity</string>

    <!-- admin page -->
    <string name="title_activity_home_admin_welcome">HomeAdminWelcome</string>
    <string name="admin_idle_text">Idle Time:</string>
    <string name="admin_idle_output">Idle Time not set</string>
    <string name="admin_room_text">Room:</string>
    <string name="admin_room_output">Room not set</string>

    <!-- admin settings screen -->
    <string name="title_activity_admin_home">Device Settings</string>
    <string name="device_settings">Device Settings</string>
    <string name="set_room__summary">Set room for device sync</string>
    <string name="set_room_title">Set Room</string>
    <string name="set_idle_summary">Set time for automatic logout and idle screen</string>
    <string name="set_idle_title">Set Idle Time</string>
    <string name="settings">Settings</string>
    <string name="title_activity_teacher_home">LecturerHomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_teacher_booking">TeacherBookingActivity</string>
    <string name="title_activity_teacher_register">LecturerRegisterActivity</string>
    <string name="title_activity_teacher_attendance">LecturerAttendanceActivity</string>
    <string name="title_activity_lecturer_logs">LecturerLogsActivity</string>
    <string name="title_activity_lecturer_register_logs_view">LecturerRegisterLogsViewActivity</string>
    <string name="title_activity_lecturer_logs_view">LecturerLogsView</string>

</resources>