<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"  
    android:layout_gravity="center"  
    tools:context=".AdminHomeActivity" >
    
     <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
	<TextView
	    android:id="@+id/admin_idle_text"
	    android:text="@string/admin_idle_text"
	    />
	<TextView
	    android:id="@+id/admin_idle_output"
	    android:text="@string/admin_idle_output"
	    />	
	    </TableRow>
	     <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
		<TextView
	    android:id="@+id/admin_room_text"
	    android:text="@string/admin_room_text"
	    />
	<TextView
	    android:id="@+id/admin_room_output"
	    android:text="@string/admin_room_output"
	    />	
</TableRow>
  <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dip" >
    <Button
        android:id="@+id/device_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"        
        android:onClick="settings"
        android:layout_span="3"
        android:text="@string/device_settings" 
        />
    </TableRow>

</TableLayout>
