<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
      android:keepScreenOn="true"
    tools:context=".LoginActivity" >

	<ImageView
	    android:id="@+id/imageviewLogin"
	    android:layout_width="match_parent"
	    android:layout_height="100dp"
	    android:layout_above="@+id/usernameLabel"
	    android:layout_alignParentTop="true"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/login_imageLabel"
	    android:scaleType="fitCenter"
	    android:src="@raw/nfclogo" />

    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordInput"
        android:layout_centerHorizontal="true"
        android:text="@string/login_passwordLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/passwordLabel"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="text" />
       
          <EditText
              android:id="@+id/passwordInput"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_above="@+id/loginButton"
              android:layout_centerHorizontal="true"
              android:ems="10"
              android:inputType="textPassword" />

    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/usernameInput"
        android:layout_centerHorizontal="true"
        android:text="@string/login_usernameLabel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="loginButton"
        android:text="@string/login_loginbuttonLabel" />

</RelativeLayout>