<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:keepScreenOn="true"
    tools:context=".LoginIdleActivity" 
    android:orientation="vertical">


<LinearLayout
    android:id="@+id/room"    
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" 
       android:layout_above="@+id/main">

      <TextView
          android:id="@+id/textView1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
        
          android:text="@string/loginidle_room" 
           android:textSize="32sp"/>

      <TextView
          android:id="@+id/loginidle_roomname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
         
          android:text="@string/loginidle_roomname"
          android:textSize="32sp" />
       <TextView        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text=" "
          android:textSize="32sp" />

      <TextView
          android:id="@+id/loginidle_dateandtime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/loginidle_dateandtime"
          android:textSize="32sp" />
      <TextView        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text=" "
          android:textSize="32sp" />
      <TextView        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text=" "
          android:textSize="32sp" />
      

</LinearLayout>

<LinearLayout
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    
    android:layout_above="@+id/imageView1"
    android:orientation="vertical" >

	 <TextView        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text=" "
          android:textSize="32sp" />

	 <TextView
	     android:id="@+id/loginidle_upcoming"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:text="Upcoming Lectures:"
	     android:layout_gravity="center_horizontal"
	     android:textSize="32sp" />
	  <TextView        
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_horizontal"
          android:text=" "
          android:textSize="32sp" />

      <ListView
          android:id="@+id/roomDataList"
          android:layout_width="match_parent"
          android:layout_height="300dp"
          android:gravity="center" >

      </ListView>   

</LinearLayout>
<ImageView
    android:id="@+id/imageView1"
    android:layout_width="200dp"
    android:layout_height="140dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:gravity="left"
    android:src="@raw/loginidle" />

</RelativeLayout>
